cites of chapter* render as [?], remove their labels

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1023,7 +1023,7 @@ TODO:
 
 \appendix
 
-\begin{thebibliography}{99}\label{r:chapter_bibliography}
+\begin{thebibliography}{99}
 \addcontentsline{toc}{chapter}{Bibliography}
 
 %%% template
@@ -1182,7 +1182,7 @@ TODO:
 %             Attachments             %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter*{Attachments}\label{r:chapter_attachments}
+\chapter*{Attachments}
 \addcontentsline{toc}{chapter}{Attachments}
 
 \section*{Source code structure}
