--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -304,14 +304,14 @@ and focuses on structural or contextual details.
 % \textit{rustdoc}, which exports all of the crate's public API into an accessible form (both human-
 % and machine-readable). Thanks to these, the semver validation problem seems particularily managable
 % in Rust, and there are some attempts addressing the issue already (mentioned in chapter
-% \ref{r:chapter_stateoftheart}).
+% \ref{r:chapter_state_of_the_art}).
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %          State of the art           %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{State of the art}\label{r:chapter_stateoftheart}
+\chapter{State of the art}\label{r:chapter_state_of_the_art}
 
 \section{Problems with using semver in Rust}\label{r:section_usageofsemver}
 
